# rag-nq

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  streamlit_app.py
app/api/: __init__.py  main.py  schemas.py
app/ui/: __init__.py  api_client.py  display.py  eval_report.py
src/config/: settings.py
src/contracts/: __init__.py  generation.py  reranking.py  retrieval.py
src/evaluation/: __init__.py  chunking_strategy_eval.py  retrieval_eval.py
src/generation/: __init__.py  grounded.py
src/ingestion/: chunk_raw.py  chunk_store.py  ingest_raw.py  ingest_silver.py  models.py  nq_loader.py  passage_store.py
src/models/: __init__.py  query_schemas.py
src/observability/: __init__.py  logging_setup.py  progress.py
src/retrieval/: Untitled  dense_index.py  qdrant_retrievers.py  rerank.py  sparse_index.py  sparse_qdrant.py
src/scripts/: build_indexes.py  (+12 more)
tests/: conftest.py  test_api.py  test_chunk_raw.py  test_chunk_store.py  test_chunking_strategy_eval.py  test_contracts.py  test_dense_index_roundtrip.py  test_dense_jsonl_streaming.py  test_doctor.py  test_doctor_qdrant.py  test_generation.py  test_ingest_silver.py  test_migrate_qdrant_passages_collection.py  test_nq_candidate_expansion.py  test_nq_loader.py  test_observability.py  test_passage_store.py  test_pipeline_e2e_m3.py  test_progress.py  test_qdrant_retrievers.py  test_query_schemas.py  test_rerank.py  test_retrieval_eval.py  test_settings_m2_env.py  test_sparse_index.py  test_sparse_qdrant.py  test_sparse_two_pass.py  test_streamlit_ui_support.py
(+3 files in other folders)
