[project]
name = "rag-nq-showcase"
version = "0.1.0"
description = "Passage-oriented RAG indexing showcase on NQ-retrieval"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.20.0",
    "tqdm>=4.66.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "qdrant-client>=1.13.0,<1.14",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.2.2",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "streamlit>=1.56.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=8.2.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "live_network: opt-in tests that hit external network services (disabled by default)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
